= Unreleased =
# Fixed
- Fixed "Omniva orders" page error, when international carriers had never been created before

# Updated
- API library to 1.3.1

= 2.2.0 =
# Fixed
- Fixed adding a new DB column in the Upgrade function of the version 2.1.0

# Improved
- Created the possibility to add/remove the desired delivery methods in the module settings
- Created the ability to choose what actions will be performed during the module uninstall
- Created an opportunity to register shipments to European countries

= 2.1.1 =
# Fixed
- Fixed return code sending parameter for OMX

# Improved
- Added recognition of COD module "Cash on delivery with order summary" (codpro).
- Added sending of shipments data to the Omniva PowerBi system

# Updated
- API library to 1.2.0

= 2.1.0 =
# Improved
- Added compatibility with One Page Checkout PS (onepagecheckoutps) module
- The module is adapted to work with Omniva OMX

# Changed
- Changed the type of the "Company country code" field to Select in the module settings to avoid an errors when entered an invalid value

# Updated
- API library to 1.1.0

= 2.0.21 =
# Improved
- Added that Omniva delivery methods would not be displayed if the dimensions of the cart exceed the maximum dimensions specified in the carrier's settings
- Added functions which allows to convert weight and dimension units to specified ones

= 2.0.20 =
# Fixed
- Removed unused hook from list of registered hooks

# Improved
- Added a possibility to log actions
- Added the option to disable automatic terminal selection

= 2.0.19 =
# Changed
- Allow FI terminals for LV senders

= 2.0.18 =
# Fixed
- Fixed bug when trying generate label from order edit page on PS 1.7.0-1.7.6

# Changed
- Changed so that the Finland parcel terminal selection map uses the Matkahuolto name, logos and colors

# Improved
- Added missed translations to Lithuanian

= 2.0.17 =
# Improved