@@ -1,6 +1,7 @@
 = Unreleased =
 # Fixed
 - Fixed "Omniva orders" page error, when international carriers had never been created before
+- Removed the use of the str_contains function, since this function only appeared in PHP 8.0
 
 # Updated
 - API library to 1.3.1
